# iris-ued

./: .gitignore  .pylintrc  .readthedocs.yml  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  RELEASE-CHECKLIST.rst  __init__.py  appveyor.yml  archive.py  azure-pipelines.yml  benchmark.py  core.py  coreV2.py  curve.py  dataset.py  dev-requirements.txt  findCenter.py  gui.py  guiV2.py  guiV3.py  masking_test.py  progress_widget.py  pyproject.toml  radialAverage.py  requirements.txt  setup.py  wavelet.py  wavelet_test.py
.appveyor/: install-miniconda.ps1
.azure/: env.yml  environment.yml  steps.yml
.github/: ISSUE_TEMPLATE.md
App/: curve.py  dataset.py  iris.py  settings_dialog.py
Iris.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Iris_UED_data_exploration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
PowderGuiApp/: HoughTransformTest.py  __init__.py  core.py  core2.py  curve.py  data_viewer.py  dataset.py  explorer.py  fluence.py  gui.py  gui2.py  image_viewer.py  image_viewer2.py  iris.py  settings.cfg  settings_dialog.py  speedtest.py  testLayout.ui  testLayout2.ui  testlayout3.ui  tiff_viewer.py
docs/: Makefile  api.rst  conf.py  dataset.rst  index.rst  installation.rst  iris.dualtree.tests.rst  iris.gui.pyqtgraph.GraphicsScene.rst  iris.gui.pyqtgraph.canvas.rst  iris.gui.pyqtgraph.exporters.rst  iris.gui.pyqtgraph.flowchart.rst  iris.gui.pyqtgraph.graphicsItems.PlotItem.rst  iris.gui.pyqtgraph.graphicsItems.rst  iris.gui.pyqtgraph.opengl.items.rst  iris.gui.pyqtgraph.tests.rst  iris.gui.pyqtgraph.util.colorama.rst  iris.gui.pyqtgraph.util.rst  iris.gui.qdarkstyle.rst  iris.gui.rst  iris.tests.rst  make.bat  plugins.rst  whatsnew.rst  workflow.rst
example_plugins/: README.md  example1.py
html/: .buildinfo  genindex.html  index.html  iris.dualtree.html  iris.dualtree.tests.html  iris.gui.html  iris.gui.pyqtgraph.GraphicsScene.html  iris.gui.pyqtgraph.canvas.html  iris.gui.pyqtgraph.console.html  iris.gui.pyqtgraph.dockarea.html  iris.gui.pyqtgraph.exporters.html  iris.gui.pyqtgraph.exporters.tests.html  iris.gui.pyqtgraph.flowchart.html  iris.gui.pyqtgraph.flowchart.library.html  iris.gui.pyqtgraph.graphicsItems.PlotItem.html  iris.gui.pyqtgraph.graphicsItems.ViewBox.html  iris.gui.pyqtgraph.graphicsItems.html  iris.gui.pyqtgraph.html  iris.gui.pyqtgraph.imageview.html  iris.gui.pyqtgraph.metaarray.html  iris.gui.pyqtgraph.multiprocess.html  iris.gui.pyqtgraph.opengl.html  iris.gui.pyqtgraph.opengl.items.html  iris.gui.pyqtgraph.parametertree.html  iris.gui.pyqtgraph.pixmaps.html  iris.gui.pyqtgraph.tests.html  (+11 more)
(+406 files in other folders)
